兼容ie 9 以上的全屏效果

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="css/Dvideo.css">
 	<style>
 		.getFullScreen{
 			position: absolute;
@@ -28,6 +29,7 @@
 		video.launchFullScreen(videoWrap)
 	}
 
+	// video.fullscreenEnabled()
 	// function FullScreen () {
 	// 	alert(video)
 	// 	video.launchFullScreen(videoWrap)
