添加部分组件  进度条  播放按钮等等

--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <HEAD>
 <title>实现浏览器真正全屏的JS代码 </title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
+<link rel="stylesheet" href="font-icon/style.css">
 <script language="javascript">
 //ps:这是实现屏幕最大化  方法一
 function openwin_max(url){
@@ -42,7 +42,7 @@ window.open(document.location, "aaa", opt);
 
 </head>
 <body>
-
+<i class="icon-play"></i>
 <input type="BUTTON" value="全屏显示一" onClick="openwin_max(document.location)">
 <br />
 <input type="BUTTON" value="全屏显示二" onClick="openwin_max(document.location)">
