--- a/test2.html
+++ b/test2.html
@@ -4,6 +4,11 @@
 <meta charset=" utf-8">  
 <meta name="author" content="http://www.softwhy.com/" />  
 <title>蚂蚁部落</title>  
+<body>
+  <div class="aaa" style="width: 300px;height: 500px;">
+    <span style="display: inline-block;vertical-align: middle;">11111111111111111111111111</span>
+  </div>
+</body>
 <script type="text/javascript">  
 var userAgent = navigator.userAgent,     
 rMsie = /(msie\s|trident.*rv:)([\w.]+)/,     
