--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/Dvideo.css">
+	<link rel="stylesheet" href="font-icon/style.css">
 	<style>
 		.getFullScreen{
 			position: absolute;
@@ -22,11 +23,15 @@
 	var videoWrap = document.getElementById('testVideo')
 	var fullScreen = document.getElementById('getFullScreen')
 	var video = new Dvideo ({
-		ele: '#testVideo'
+		ele: '#testVideo',
+		nextVideoExtend: function () {
+			alert('222222222222222222asdasd')
+		}
 	})
 
 	fullScreen.onclick=function(){
 		video.launchFullScreen(videoWrap)
+		// video.nextVideo();
 	}
 
 	// video.fullscreenEnabled()
