解决ie11 手动关闭全屏的问题  置于全屏与非全屏的操作 代码还需优化

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 		ele: '#testVideo',
 		nextVideoExtend: function () {
 			alert('222222222222222222asdasd')
-		}
+		},
+		showNext: true,
+		width: '420px',
+		height: '240px',
 	})
 
 	fullScreen.onclick=function(){
