添加进度条  音量由键盘事件操作

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		nextVideoExtend: function () {
 			alert('222222222222222222asdasd')
 		},
-		showNext: true,
+		showNext: false,
 		width: '420px',
 		height: '240px',
 	})
