优化改变音量的同事存储本地  下次刷新音量还保持不变  以及在音量改变的同时  界面效果改变 （键盘事件 调整音量时候）

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 			border-radius: 4px;
 			display: inline-block;
 		}
+		body,html{
+			font-size: 16px;
+		}
+		.btn{
+			font-size: 1rem;
+		}
 	</style>
 </head>
 <body>
