--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="shortcut icon" href="http://www.daiwei.org/index/images/logo/favicon.ico">
 	<link rel="stylesheet" href="css/Dvideo.css">
 	<link rel="stylesheet" href="font-icon/style.css">
 	<style>
