优化播放器进度条点击的bug 以及ie11一下全屏的解决方案

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<meta http-equiv=”X-UA-Compatible” content=”IE=edge,chrome=1″ />
 	<link rel="shortcut icon" href="http://www.daiwei.org/index/images/logo/favicon.ico">
 	<link rel="stylesheet" href="css/Dvideo.css">
 	<link rel="stylesheet" href="font-icon/style.css">
