--- a/index.html
+++ b/index.html
@@ -114,30 +114,17 @@
 			autoplay: true,
 			setVideoDefinition: function (type, e, current) {
 				if (type === '0') {
-					// setTimeout(function () {
-						// video.videoEle.src = ''
-					// }, 3000)
-					// alert('你点击了标清')
-					video.setVideoInfo('這是標清','http://web.hi-finance.com.cn/shark/sharksbier?episode_id=5881&clarity=1',current)
+					alert('你点击了标清')
+					// video.setVideoInfo('這是標清','这里填写视频的标清地址',current)
 				}
 				if (type === '1') {
-					// setTimeout(function () {
-						// video.videoEle.src = ''
-					// }, 3000)
-					video.setVideoInfo('這是高清','http://web.hi-finance.com.cn/shark/sharksbier?episode_id=5881&clarity=2',current)				}
-				if (type === '2') {
-					// setTimeout(function () {
-						// video.videoEle.src = ''
-					// }, 3000)
-					video.setVideoInfo('這是超清','http://web.hi-finance.com.cn/shark/sharksbier?episode_id=5881&clarity=3',current)
+					alert('你点击了标清')
+					// video.setVideoInfo('這是標清','这里填写视频的高清地址',current)
 				}
-				video.showLoading(false)
-
-				// setTimeout(function () {
-				// 	video.videoEle.currentTime = current
-				// 	video.videoPlay()
-				// 	video.showLoading(false)
-				// }, 3000)
+				if (type === '2') {
+					alert('你点击了标清')
+					// video.setVideoInfo('這是標清','这里填写视频的超清地址',current)
+				}
 			}
 		})
 
