--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
 		<div id="testVideo"></div>
 		<div class="ctrl-c" style="user-select:none">
 			<span class="btn" style="background: #B42828" onclick="setFullScreen()">点击全屏</span>
-			<span class="btn" style="background: #95487B" onclick="play()">播放 ctrl + space</span>
-			<span class="btn" style="background: #4D5DA6" onclick="pause()">暂停 ctrl + space</span>
+			<span class="btn" style="background: #95487B" onclick="play()">播放 space</span>
+			<span class="btn" style="background: #4D5DA6" onclick="pause()">暂停 space</span>
 			<span class="btn" style="background: #488BAD" onclick="playpause()">播放暂停</span>
-			<span class="btn" style="background: #359961" onclick="setVolume(1)">100的音量大小 ctrl + up</span>
-			<span class="btn" style="background: #547046" onclick="setVolume(0.3)">30的音量大小 ctrl + down</span>
+			<span class="btn" style="background: #359961" onclick="setVolume(1)">100的音量大小 up</span>
+			<span class="btn" style="background: #547046" onclick="setVolume(0.3)">30的音量大小 down</span>
 			<span class="btn" style="background: #767030" onclick="setBackRate(3)">2.0的语速</span>
 			<span class="btn" style="background: #B2662E" onclick="setBackRate(1)">正常的语速</span>
-			<span class="btn" style="background: #977074" onclick="setVideoRewind(10)">快退 ctrl + left</span>
-			<span class="btn" style="background: #4F1B60" onclick="setVideoForward(10)">快进 ctrl + right</span>
+			<span class="btn" style="background: #977074" onclick="setVideoRewind(10)">快退 left</span>
+			<span class="btn" style="background: #4F1B60" onclick="setVideoForward(10)">快进 right</span>
 			<span class="btn" style="background: #4F1B60" onclick="showLoading()">显示进度信息</span>
 			<span class="btn" style="background: #4F1B60" onclick="showTopBottomCtrlNotClose()">显示上下菜单且不自动关闭</span>
 			<span class="btn" style="background: #4F1B60" onclick="hideTopBottomCtrlLi()">立刻关闭上下菜单</span>
