--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
 		#video{
 			margin: 0 auto;
 			border:3px solid rgba(255,255,255,0.9);
+			box-sizing: border-box;
 		}
 	</style>
 </head>
 <body>
 	<div class="centerInfo">
-		<div id="video"></div>
+		<div id="video" ></div>
 		<div class="ctrl-c" style="user-select:none">
 			<span class="btn">点击全屏</span>
 			<span class="btn">播放 space</span>
